frontend/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: willcataco-dev-frontend
  namespace: willcataco-dev
  labels:
    app: willcataco-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: willcataco-frontend
      environment: dev
  template:
    metadata:
      labels:
        app: willcataco-frontend
        environment: dev
    spec:
      containers:
        - name: willcataco-frontend
          image: ghcr.io/willcataco-los-papus-y-sebas/willcataco:dev-90a120e6b66339e105f0ce785b1505fb958eb04b
          ports:
            - containerPort: 80
