frontend/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: willcataco-dev-frontend
  namespace: willcataco-dev
spec:
  selector:
    app: willcataco-frontend
    environment: dev
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
